@@ -1,0 +1,40 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading;
+using System.Threading.Tasks;
+using Xunit.Abstractions;
+using Xunit.Sdk;
+
+namespace LightBDD.XUnit2.Implementation.Customization
+{
+    internal class TestFrameworkClassRunner : XunitTestClassRunner
+    {
+        public TestFrameworkClassRunner(ITestClass testClass, IReflectionTypeInfo @class, IEnumerable<IXunitTestCase> testCases, IMessageSink diagnosticMessageSink, IMessageBus messageBus, ITestCaseOrderer testCaseOrderer, ExceptionAggregator aggregator, CancellationTokenSource cancellationTokenSource, IDictionary<Type, object> collectionFixtureMappings) : base(testClass, @class, testCases, diagnosticMessageSink, messageBus, testCaseOrderer, aggregator, cancellationTokenSource, collectionFixtureMappings)
+        {
+        }
+
+        protected override async Task<RunSummary> RunTestMethodsAsync()
+        {
+            IEnumerable<IXunitTestCase> orderedTestCases;
+            try
+            {
+                orderedTestCases = TestCaseOrderer.OrderTestCases(TestCases);
+            }
+            catch (Exception ex)
+            {
+                var innerEx = ex.Unwrap();
+                DiagnosticMessageSink.OnMessage(new DiagnosticMessage($"Test case orderer '{TestCaseOrderer.GetType().FullName}' threw '{innerEx.GetType().FullName}' during ordering: {innerEx.Message}{Environment.NewLine}{innerEx.StackTrace}"));
+                orderedTestCases = TestCases.ToList();
+            }
+
+            var constructorArguments = CreateTestClassConstructorArguments();
+            var tasks = orderedTestCases
+                .GroupBy(tc => tc.TestMethod, TestMethodComparer.Instance)
+                .Select(method => (Func<Task<RunSummary>>)(() => RunTestMethodAsync(method.Key, (IReflectionMethodInfo)method.Key.Method, method, constructorArguments)))
+                .ToArray();
+
+            return await TaskExecutor.RunAsync(CancellationTokenSource.Token, tasks, TestClass);
+        }
+    }
+}
