@@ -2,6 +2,7 @@ using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Reflection;
+using Xunit;
 using Xunit.Abstractions;
 using Xunit.Sdk;
 
@@ -17,11 +18,16 @@ namespace LightBDD.XUnit2.Implementation.Customization
 
         protected override void RunTestCases(IEnumerable<IXunitTestCase> testCases, IMessageSink executionMessageSink, ITestFrameworkExecutionOptions executionOptions)
         {
-            var bddScopeAttribute = GetLightBddScopeAttribute();
+            var assembly = GetAssembly();
+            var bddScopeAttribute = GetLightBddScopeAttribute(assembly);
+
+            var enableInterClassParallelization = ShallEnableInterClassParallelization(assembly, executionOptions);
+            AssemblySettings.SetSettings(new AssemblySettings { EnableInterClassParallelization = enableInterClassParallelization });
+
             bddScopeAttribute?.SetUp();
             try
             {
-                using (var assemblyRunner = new XunitTestAssemblyRunner(TestAssembly, testCases, DiagnosticMessageSink, executionMessageSink, executionOptions))
+                using (var assemblyRunner = CreateAssemblyRunner(testCases, executionMessageSink, executionOptions, enableInterClassParallelization))
                     assemblyRunner.RunAsync().Wait();
             }
             finally
@@ -30,18 +36,39 @@ namespace LightBDD.XUnit2.Implementation.Customization
             }
         }
 
-        private LightBddScopeAttribute GetLightBddScopeAttribute()
+        private XunitTestAssemblyRunner CreateAssemblyRunner(IEnumerable<IXunitTestCase> testCases,
+            IMessageSink executionMessageSink, ITestFrameworkExecutionOptions executionOptions,
+            bool enableInterClassParallelization)
+        {
+            return enableInterClassParallelization
+                ? new TestFrameworkAssemblyRunner(TestAssembly, testCases, DiagnosticMessageSink, executionMessageSink, executionOptions)
+                : new XunitTestAssemblyRunner(TestAssembly, testCases, DiagnosticMessageSink, executionMessageSink, executionOptions);
+        }
+
+        private bool ShallEnableInterClassParallelization(Assembly assembly, ITestFrameworkExecutionOptions executionOptions)
+        {
+            var attribute = assembly.GetCustomAttribute<CollectionBehaviorAttribute>();
+            if (executionOptions.DisableParallelization() ?? attribute?.DisableTestParallelization ?? false)
+                return false;
+            return assembly.GetCustomAttribute<ClassCollectionBehaviorAttribute>()?.AllowTestParallelization ?? false;
+        }
+
+        private Assembly GetAssembly()
         {
             var asmName = TestAssembly.Assembly.Name;
 #if NET45
-            var attribs = Assembly.Load(asmName)
+            return Assembly.Load(asmName);
 #else
-            var attribs = Assembly.Load(new AssemblyName(asmName))
+            return Assembly.Load(new AssemblyName(asmName));
 #endif
+        }
+        private LightBddScopeAttribute GetLightBddScopeAttribute(Assembly assembly)
+        {
+            var attribs = assembly
                 .GetCustomAttributes(typeof(LightBddScopeAttribute))
                 .Cast<LightBddScopeAttribute>().ToArray();
             if (attribs.Length > 1)
-                throw new InvalidOperationException($"Only one attribute of {typeof(LightBddScopeAttribute)} type can be defined in assembly {asmName}");
+                throw new InvalidOperationException($"Only one attribute of {typeof(LightBddScopeAttribute)} type can be defined in assembly {assembly.FullName}");
             return attribs.FirstOrDefault();
         }
     }
