@@ -10,6 +10,7 @@ Summary:
 + #59 (Autofac)(New) Added LightBDD.Autofac integration for Autofac DI container
 + #67 (Fixie)(New) Added LightBdd.Fixie2 integration project with https://github.com/fixie/fixie
 + #70 (all)(New) Added Table<TRow> and VerifiableTable<TRow> to represent tabular step method parameters
++ #117 (XUnit2)(New) Added experimental ClassCollectionBehavior attribute allowing inter-class test parallelization
 
 Version 2.3.6
 ----------------------------------------
